--- a/contact.html
+++ b/contact.html
@@ -88,7 +88,7 @@
 					</div>
 					<div class="form-group label-floating">
 						<label class="form-control-label bmd-label-floating" for="message"> Your message</label>
-						<textarea id="form_message" name="message" class="form-control" rows="6" required="required" data-error="Please Leave As a Message."></textarea>
+						<textarea id="form_message" name="message" class="form-control" rows="6" required="required" data-error="Please Leave Us a Message."></textarea>
 						<div class="help-block with-errors"></div>
 					</div>
 					<div class="submit text-center">
