--- a/contact.html
+++ b/contact.html
@@ -70,31 +70,34 @@
 		<div class="row">
 			<div class="col-md-6">
 				<p class="description">You can contact us with anything related to our services and products. We&apos;ll get in touch with you as soon as possible.<br><br></p>
-				<form id="contact-form" method="post" action="forms/contact-form.php" role="form">
-					<div class="form-group">
-						<label for="form_name" class="bmd-label-floating">Your name</label>
-						<input id="form_name" type="text" name="name" class="form-control" required="required" data-error="A Name is Required.">
-						<div class="help-block with-errors"></div>
-					</div>
-					<div class="form-group">
-						<label for="exampleInputEmails" class="bmd-label-floating">Email address</label>
-						<input id="form_email" type="email" class="form-control" required="required" data-error="Valid Email is Required.">
-						<div class="help-block with-errors"></div>
-					</div>
-					<div class="form-group">
-						<label for="form_phone" class="bmd-label-floating">Phone</label>
-						<input id="form_phone" type="tel" name="phone" class="form-control" >
-						<div class="help-block with-errors"></div>
-					</div>
-					<div class="form-group label-floating">
-						<label class="form-control-label bmd-label-floating" for="message"> Your message</label>
-						<textarea id="form_message" name="message" class="form-control" rows="6" required="required" data-error="Please Leave Us a Message."></textarea>
-						<div class="help-block with-errors"></div>
-					</div>
-					<div class="submit text-center">
-						<input type="submit" class="btn btn-danger btn-raised btn-round" value="Contact Us">
-					</div>
-				</form>
+				<div class="messages"></div>
+				<div class="controls">
+					<form id="contact-form" method="post" action="forms/contact.php" role="form">
+						<div class="form-group">
+							<label for="form_name" class="bmd-label-floating">Your name</label>
+							<input id="form_name" type="text" name="name" class="form-control" required="required" data-error="A Name is Required.">
+							<div class="help-block with-errors"></div>
+						</div>
+						<div class="form-group">
+							<label for="exampleInputEmails" class="bmd-label-floating">Email address</label>
+							<input id="form_email" type="email" class="form-control" required="required" data-error="Valid Email is Required.">
+							<div class="help-block with-errors"></div>
+						</div>
+						<div class="form-group">
+							<label for="form_phone" class="bmd-label-floating">Phone</label>
+							<input id="form_phone" type="tel" name="phone" class="form-control" >
+							<div class="help-block with-errors"></div>
+						</div>
+						<div class="form-group label-floating">
+							<label class="form-control-label bmd-label-floating" for="message"> Your message</label>
+							<textarea id="form_message" name="message" class="form-control" rows="6" required="required" data-error="Please Leave Us a Message."></textarea>
+							<div class="help-block with-errors"></div>
+						</div>
+						<div class="submit text-center">
+							<input type="submit" class="btn btn-danger btn-raised btn-round" value="Contact Us">
+						</div>
+					</form>
+				</div>
             <div id="success_message" style="width:100%; height:100%; display:none; "> <h3>Your message sent successfully!</h3> </div>
             <div id="error_message" style="width:100%; height:100%; display:none; "> <h3>Error</h3> Sorry there was an error sending your form. </div>
 			</div>
@@ -198,10 +201,7 @@
 			</div>
 		</div>
 </div>
-
-<div class="main quote-container">
-
-</div>		
+	
 		
 <div class="container section">
 	<div class="col-md-10 mx-auto">
