--- a/contact.html
+++ b/contact.html
@@ -70,17 +70,18 @@
 		<div class="row">
 			<div class="col-md-6">
 				<p class="description">You can contact us with anything related to our services and products. We&apos;ll get in touch with you as soon as possible.<br><br></p>
-				<div class="messages"></div>
-				<div class="controls">
+				
 					<form id="contact-form" method="post" action="forms/contact.php" role="form">
+						<div class="messages"></div>
+						<div class="controls">
 						<div class="form-group">
 							<label for="form_name" class="bmd-label-floating">Your name</label>
 							<input id="form_name" type="text" name="name" class="form-control" required="required" data-error="A Name is Required.">
 							<div class="help-block with-errors"></div>
 						</div>
 						<div class="form-group">
-							<label for="exampleInputEmails" class="bmd-label-floating">Email address</label>
-							<input id="form_email" type="email" class="form-control" required="required" data-error="Valid Email is Required.">
+							<label for="form_email" class="bmd-label-floating">Email address</label>
+							<input id="form_email" type="email" name="email" class="form-control" required="required" data-error="Valid Email is Required.">
 							<div class="help-block with-errors"></div>
 						</div>
 						<div class="form-group">
