--- a/contact.html
+++ b/contact.html
@@ -104,6 +104,7 @@
 					<div class="icon biotherm-hydro-icon">
 						<i class="fas fa-map-marker-alt"></i>
 					</div>
+
 					<div class="description">
 						<h4 class="info-title">Address</h4>
 						<p>476 Primero Court<br> Cotati, CA 94931<br> USA</p>
@@ -118,106 +119,115 @@
 						<p> 800-438-4328<br> Mon - Fri, 8:00am - 5:00pm</p>
 					</div>
 				</div>
+				<div class="container section">
+					<div class="col-md-3 text-center">
+						<a href="quote.html"><button type="button" class="btn btn-danger"> Request a Quote</button></a>
+					</div>
+				</div>
 			</div>
 		</div>
 	</div>
 </div>
 	
 	
+<hr>
 	
-	
-	<div class="container">
-		<div class="row section">
+<div class="container">
+	<div class="row section">
+	</div>
+	<div class="row">
+		<div class="col-md-12 ml-auto mr-auto text-center">
+			<h2 class="description">Ordering Process</h2>
 		</div>
-		<div class="row">
-			<div class="col-md-12 ml-auto mr-auto text-center">
-				<h2 class="description">Ordering Process</h2>
-			</div>
-		</div>
-		<div class="row">
-			<div class="col-md-3">
-				<div class="card card-profile card-plain">
-					<div class="card-header card-header-image">
+	</div>
+	<div class="row">
+		<div class="col-md-3">
+			<div class="card card-profile card-plain">
+				<div class="card-header card-header-image">
 
-					</div>
-					<div class="card-body">
-						<h4 class="card-title">Complimentary No-Obligation Consultation</h4>
-						<h6 class="card-category text-muted"></h6>
-						<p class="card-description">Determine your needs through our user friendly questionnaire or let us do it for you. Our custom software compiles your information and provides a custom engineered solution to meet your performance requirements.</p>
-					</div>
-					<div class="card-footer justify-content-center">
-					</div>
 				</div>
-			</div>
-			<div class="col-md-3">
-				<div class="card card-profile card-plain">
-					<div class="card-header card-header-image">
-
-					</div>
-					<div class="card-body">
-						<h4 class="card-title">Proposal</h4>
-						<h6 class="card-category text-muted"></h6>
-						<p class="card-description">Our easy-to-read proposal format clearly explains what’s in our system and how it operates. Enjoy unlimited flexibility and choices to determine your needs. Our sales engineers are readily available to answer any question or concerns you may have.</p>
-					</div>
-					<div class="card-footer justify-content-center">
-					</div>
+				<div class="card-body">
+					<h4 class="card-title">Complimentary No-Obligation Consultation</h4>
+					<h6 class="card-category text-muted"></h6>
+					<p class="card-description">Determine your needs through our user friendly questionnaire or let us do it for you. Our custom software compiles your information and provides a custom engineered solution to meet your performance requirements.</p>
 				</div>
-			</div>
-			<div class="col-md-3">
-				<div class="card card-profile card-plain">
-					<div class="card-header card-header-image">
-
-					</div>
-					<div class="card-body">
-						<h4 class="card-title">Order &amp; Contract</h4>
-						<h6 class="card-category text-muted"></h6>
-						<p class="card-description">Simple, clear and complete agreement with reasonable payment terms and quick turnaround. Alternative Financing Our grant specialist is readily available to provide guidance on non-traditional financing such as grants and tax rebates that can offset your project. We can assist with the application (additional fee).</p>
-					</div>
-					<div class="card-footer justify-content-center">
-					</div>
-				</div>
-			</div>
-			<div class="col-md-3">
-				<div class="card card-profile card-plain">
-					<div class="card-header card-header-image">
-
-					</div>
-					<div class="card-body">
-						<h4 class="card-title">Delivery &amp; Support</h4>
-						<h6 class="card-category text-muted"></h6>
-						<p class="card-description">Unlimited technical support for two years from date of purchase. Boilers & boiler loops can be skid mounted. Includes custom CAD drawings of your facility and complete instructions. Need external help? We can recommend experienced greenhouse installers and get a specialist to your site. Replacement parts are readily available and promptly shipped.</p>
-					</div>
-					<div class="card-footer justify-content-center">
-						
-					</div>
+				<div class="card-footer justify-content-center">
 				</div>
 			</div>
 		</div>
-		<div class="container section">
-			<div class="col-md-3 text-center">
-				<a href="quote.html"><button type="button" class="btn btn-danger"> Request a Quote</button></a>
+		<div class="col-md-3">
+			<div class="card card-profile card-plain">
+				<div class="card-header card-header-image">
+
+				</div>
+				<div class="card-body">
+					<h4 class="card-title">Proposal</h4>
+					<h6 class="card-category text-muted"></h6>
+					<p class="card-description">Our easy-to-read proposal format clearly explains what’s in our system and how it operates. Enjoy unlimited flexibility and choices to determine your needs. Our sales engineers are readily available to answer any question or concerns you may have.</p>
+				</div>
+				<div class="card-footer justify-content-center">
+				</div>
 			</div>
 		</div>
+		<div class="col-md-3">
+			<div class="card card-profile card-plain">
+				<div class="card-header card-header-image">
+
+				</div>
+				<div class="card-body">
+					<h4 class="card-title">Order &amp; Contract</h4>
+					<h6 class="card-category text-muted"></h6>
+					<p class="card-description">Simple, clear and complete agreement with reasonable payment terms and quick turnaround. Alternative Financing Our grant specialist is readily available to provide guidance on non-traditional financing such as grants and tax rebates that can offset your project. We can assist with the application (additional fee).</p>
+				</div>
+				<div class="card-footer justify-content-center">
+				</div>
+			</div>
+		</div>
+		<div class="col-md-3">
+			<div class="card card-profile card-plain">
+				<div class="card-header card-header-image">
+
+				</div>
+				<div class="card-body">
+					<h4 class="card-title">Delivery &amp; Support</h4>
+					<h6 class="card-category text-muted"></h6>
+					<p class="card-description">Unlimited technical support for two years from date of purchase. Boilers & boiler loops can be skid mounted. Includes custom CAD drawings of your facility and complete instructions. Need external help? We can recommend experienced greenhouse installers and get a specialist to your site. Replacement parts are readily available and promptly shipped.</p>
+				</div>
+				<div class="card-footer justify-content-center">
+					
+				</div>
+			</div>
+		</div>
+	</div>
 </div>
-	
+
+<hr>
 		
 <div class="container section">
-	<div class="col-md-10 mx-auto">
+	<div class="col-md-12 mx-auto">
 		<div class="row">
-			<h3>Grants and Incentives</h3>
-			<p>Offset your new project or capital improvement costs through Grants, State Rebates and Incentives. We can identify potential funding, grant and utility rebates. Through our Energy Savings Calculator, we can provide detailed calculations on the efficiency of different heating options that we propose. Grower-centric technologies eligible for incentives are:</p>
-			<p><ul>
-				<li>Condensing Boilers</li>
-				<li>Hot Water Distribution Systems</li>
-				<li>Energy/Shade Curtains</li>
-				<li>Condensing Unit Heaters</li>
-				<li>Variable Speed Drives</li>
-				<li>Environmental Control Systems</li>
-				<li>LED Lighting</li>
-				<li>Structure Re-glazing</li>
-				<li>Natural Ventilation Structures</li>
-			</ul></p>
-			<p>Once incentives have been identified, we can provide a reference to grant and incentive firm Sustainable Energy Financing to help you with the process of applying for these funds—regardless of technology. Our close working relationship provides a seamless interface to help you get the funding you deserve. To learn more, please contact our grant and incentive specialist Dan Kuipers at (800) 438-4328.</p>
+			<h2 class="description">Grants and Incentives</h2>
+		</div>
+		<div class="row">
+			<div class="col-md-6">
+				<p>Offset your new project or capital improvement costs through Grants, State Rebates and Incentives. We can identify potential funding, grant and utility rebates. Through our Energy Savings Calculator, we can provide detailed calculations on the efficiency of different heating options that we propose.</p>
+				<p>Once incentives have been identified, we can provide a reference to grant and incentive firm Sustainable Energy Financing to help you with the process of applying for these funds—regardless of technology. Our close working relationship provides a seamless interface to help you get the funding you deserve. To learn more, please contact our grant and incentive specialist Dan Kuipers at (800) 438-4328.</p>
+			</div>
+			<div class="col-md-6">
+				<p>Grower-centric technologies eligible for incentives are:</p>
+				<p><ul>
+					<li>Condensing Boilers</li>
+					<li>Hot Water Distribution Systems</li>
+					<li>Energy/Shade Curtains</li>
+					<li>Condensing Unit Heaters</li>
+					<li>Variable Speed Drives</li>
+					<li>Environmental Control Systems</li>
+					<li>LED Lighting</li>
+					<li>Structure Re-glazing</li>
+					<li>Natural Ventilation Structures</li>
+				</ul></p>
+			</div>
+			
 		</div>
 	</div>
 </div>
