division title changes

--- a/index.html
+++ b/index.html
@@ -72,10 +72,9 @@
 								</div>
 								<h4 class="card-title">Environmental</h4>
 								<ul class="product-card-list">
-										<li>Heating</li>
-										<li>Cooling</li>
+										<li>Heating / Cooling</li>
 										<li>Dehumidification</li>
-										<li>CO<sub>2</sub> Dosing</li>
+										<li>CO<sub>2</sub></li>
 								</ul>
 								<a href="heat.html"><button type="button" class="btn btn-danger"><b>Environmental</b></button></a>
 								</div>
@@ -89,7 +88,7 @@
 								</div>
 								<h4 class="card-title">Waterworks</h4>
 								<ul class="product-card-list">
-										<li>D.O. Infusion</li>
+										<li>Dissolved Oxygen</li>
 										<li>Flood Floors</li>
 								</ul>
 								<a href="hydro.html"><button type="button" class="btn btn-hydro"><b>Waterworks</b></button></a>
