--- a/index.html
+++ b/index.html
@@ -63,56 +63,57 @@
 				</div>
 			</div>
 			<div class="features">
-				<div class="row">
-					<div class="col-md-4">
-						<div class="products">
-							<div class="card-body">
-								<div class="icon icon-info">
-									<img class="img" src="img/biotherm-heat.png" style="width:100px;"/>
+				<div class="col-md-10 ml-auto mr-auto text-center">
+					<div class="row">
+						<div class="col-md-4">
+							<div class="products">
+								<div class="card-body">
+									<div class="icon icon-info">
+										<img class="img" src="img/biotherm-heat.png" style="width:100px;"/>
+									</div>
+									<h4 class="card-title">Environmental</h4>
+									<ul class="product-card-list">
+											<li>Heating / Cooling</li>
+											<li>Dehumidification</li>
+											<li>CO<sub>2</sub></li>
+									</ul>
+									<a href="heat.html"><button type="button" class="btn btn-danger"><b>Environmental</b></button></a>
+									</div>
 								</div>
-								<h4 class="card-title">Environmental</h4>
-								<ul class="product-card-list">
-										<li>Heating / Cooling</li>
-										<li>Dehumidification</li>
-										<li>CO<sub>2</sub></li>
-								</ul>
-								<a href="heat.html"><button type="button" class="btn btn-danger"><b>Environmental</b></button></a>
+							</div>
+						<div class="col-md-4">
+							<div class="products">
+								<div class="card-body">
+									<div class="icon icon-success">
+										<img class="img" src="img/biotherm-hydro.png" style="width:100px;"/>
+									</div>
+									<h4 class="card-title">Waterworks</h4>
+									<ul class="product-card-list">
+											<li>Dissolved Oxygen</li>
+											<li>Flood Floors</li>
+									</ul>
+									<a href="hydro.html"><button type="button" class="btn btn-hydro"><b>Waterworks</b></button></a>
 								</div>
 							</div>
 						</div>
-					<div class="col-md-4">
-						<div class="products">
-							<div class="card-body">
-								<div class="icon icon-success">
-									<img class="img" src="img/biotherm-hydro.png" style="width:100px;"/>
+						<div class="col-md-4">
+							<div class="products">
+								<div class="card-body">
+									<div class="icon icon-danger">
+										<img class="img" src="img/biotherm-tech.png" style="width:100px;"/>
+									</div>
+									<h4 class="card-title">Automation</h4>
+									<ul class="product-card-list">
+											<li>Data Visualization</li>
+											<li>Control Solutions</li>
+									</ul>
+									<a href="tech.html"><button type="button" class="btn btn-success"><b>Automation</b></button></a>
 								</div>
-								<h4 class="card-title">Waterworks</h4>
-								<ul class="product-card-list">
-										<li>Dissolved Oxygen</li>
-										<li>Flood Floors</li>
-								</ul>
-								<a href="hydro.html"><button type="button" class="btn btn-hydro"><b>Waterworks</b></button></a>
-							</div>
-						</div>
-					</div>
-					<div class="col-md-4">
-						<div class="products">
-							<div class="card-body">
-								<div class="icon icon-danger">
-									<img class="img" src="img/biotherm-tech.png" style="width:100px;"/>
-								</div>
-								<h4 class="card-title">Automation</h4>
-								<ul class="product-card-list">
-										<li>Data Visualization</li>
-										<li>Control Solutions</li>
-								</ul>
-								<a href="tech.html"><button type="button" class="btn btn-success"><b>Automation</b></button></a>
 							</div>
 						</div>
 					</div>
 				</div>
 			</div>
-	
 		</div>
 	</div>
 
@@ -171,11 +172,11 @@
 						<div class="col-md-3">
 							<div class="card card-plain card-blog">
 								<div class="card-header card-header-image">
-									<a href="#"><img class="img img-raised" src="img/card.jpg"></a>
+									<a href="post-efficient-heat-greenhouse-winter.html"><img class="img img-raised" src="img/card.jpg"></a>
 								</div>
 								<div class="card-body">
 									<h6 class="card-category text-info"><i class="far fa-lightbulb fa-2x"></i> Enterprise</h6>
-									<h4 class="card-title"><a href="#">What Is the Most Efficient Way to Heat a Greenhouse in the Winter?</a></h4>
+									<h4 class="card-title"><a href="post-efficient-heat-greenhouse-winter.html">What Is the Most Efficient Way to Heat a Greenhouse in the Winter?</a></h4>
 									<p class="card-description">Nam imperdiet dignissim luctus. Maecenas pretium, arcu eu consequat iaculis, leo nibh imperdiet tortor, at maximus enim eros eget massa. Mauris eget viverra turpis. <a href="#"> Read More </a></p>
 								</div>
 							</div>
