--- a/index.html
+++ b/index.html
@@ -177,43 +177,43 @@
 								<div class="card-body">
 									<h6 class="card-category text-info"><i class="far fa-lightbulb fa-2x"></i> Enterprise</h6>
 									<h4 class="card-title"><a href="post-efficient-heat-greenhouse-winter.html">What Is the Most Efficient Way to Heat a Greenhouse in the Winter?</a></h4>
-									<p class="card-description">Nam imperdiet dignissim luctus. Maecenas pretium, arcu eu consequat iaculis, leo nibh imperdiet tortor, at maximus enim eros eget massa. Mauris eget viverra turpis. <a href="#"> Read More </a></p>
+									<p class="card-description">If you’re growing your crops year-round using a light deprivation greenhouse, heating costs can be prohibitive, especially in winter. <a href="post-efficient-heat-greenhouse-winter.html"> Read More </a></p>
 								</div>
 							</div>
 						</div>
 						<div class="col-md-3">
 							<div class="card card-plain card-blog">
 								<div class="card-header card-header-image">
-									<a href="#"><img class="img img-raised" src="img/card1.jpg"></a>
+									<a href="post-what-is-root-zone-heating.html"><img class="img img-raised" src="img/card1.jpg"></a>
 								</div>
 								<div class="card-body ">
 									<h6 class="card-category text-success"><i class="fas fa-leaf fa-2x"></i> Technique</h6>
-									<h4 class="card-title"><a href="#">What is Root Zone Heating?</a></h4>
-									<p class="card-description">Nam imperdiet dignissim luctus. Maecenas pretium, arcu eu consequat iaculis, leo nibh imperdiet tortor, at maximus enim eros eget massa. Mauris eget viverra turpis. <a href="#"> Read More </a></p>
+									<h4 class="card-title"><a href="post-what-is-root-zone-heating.html">What is Root Zone Heating?</a></h4>
+									<p class="card-description">Horticulture engineers have spent years developing heating systems to maintain uniform temperatures within a greenhouse, and all would agree heating from the ground up simply makes the most sense. <a href="post-what-is-root-zone-heating.html"> Read More </a></p>
 								</div>
 							</div>
 						</div>
 						<div class="col-md-3">
 							<div class="card card-plain card-blog">
 								<div class="card-header card-header-image">
-									<a href="#"><img class="img img-raised" src="img/card2.jpg"></a>
+									<a href="post-spotlight-micheals-greenhouses.html"><img class="img img-raised" src="img/card2.jpg"></a>
 								</div>
 								<div class="card-body ">
 									<h6 class="card-category text-danger"><i class="fas fa-map-marker-alt fa-2x"></i> Project</h6>
-									<h4 class="card-title"><a href="#">Project Spotlight: Michael’s Greenhouses</a></h4>
-									<p class="card-description">Nam imperdiet dignissim luctus. Maecenas pretium, arcu eu consequat iaculis, leo nibh imperdiet tortor, at maximus enim eros eget massa. Mauris eget viverra turpis. <a href="#"> Read More </a></p>
+									<h4 class="card-title"><a href="post-spotlight-micheals-greenhouses.html">Project Spotlight: Michael’s Greenhouses</a></h4>
+									<p class="card-description">Michael's Greenhouses is located in Cheshire CT and has been owned and operated by the Arisco family since 1969. Michael's is a leading wholesale grower of annuals and perennials. <a href="post-spotlight-micheals-greenhouses.html"> Read More </a></p>
 								</div>
 							</div>
 						</div>
 						<div class="col-md-3">
 							<div class="card card-plain card-blog">
 								<div class="card-header card-header-image">
-									<a href="#"><img class="img img-raised" src="img/card3.jpg"></a>
+									<a href="post-considering-new-projects.html"><img class="img img-raised" src="img/card3.jpg"></a>
 								</div>
 								<div class="card-body ">
 									<h6 class="card-category text-info"><i class="fas fa-chart-line fa-2x"></i> Trade</h6>
-									<h4 class="card-title"><a href="#">Cultivate’ 15 Booth #1239</a></h4>
-									<p class="card-description">Nam imperdiet dignissim luctus. Maecenas pretium, arcu eu consequat iaculis, leo nibh imperdiet tortor, at maximus enim eros eget massa. Mauris eget viverra turpis. <a href="#"> Read More </a></p>
+									<h4 class="card-title"><a href="post-considering-new-projects.html">Six Important Points to Consider with Regard to New Projects</a></h4>
+									<p class="card-description">Although it may seem like Spring just started, Summer is right around the corner and it's time to start thinking about upcoming expansions. <a href="post-considering-new-projects.html"> Read More </a></p>
 								</div>
 							</div>
 						</div>
