--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-md-10 ml-auto mr-auto">
-					<h2>Let It <b>Grow</b></h2>
+					<h2>Know Your <b>Grow</b></h2>
 					<div class="row">
 						<div class="col-md-3">
 							<div class="card card-plain card-blog">
