--- a/index.html
+++ b/index.html
@@ -3,6 +3,13 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+	
+	<meta property="og:url" content="https://biotherm.davidawindham.com/www/" />
+	<meta property="og:type" content="website" />
+	<meta property="og:title" content="BioTherm Solutions">
+	<meta property="og:description" content="Climate Systems - Hydro Sciences - Data &amp; Automation">
+	<meta property="og:image" content="https://biotherm.davidawindham.com/www/img/biotherm-open-graph.jpg" />
+			
 	<link rel="stylesheet" href="css/fontawesome.css">
 	<link rel="stylesheet" href="css/material.css">
 	<link rel="stylesheet" href="css/style.css">
@@ -44,7 +51,7 @@
 	<div class="container">
 		<div class="row">
 			<div class="col-md-6">
-				<h1>Time to <b>Grow</b></h1>
+				<h1>Know Your <b>Grow</b></h1>
 				
 				<h4>Established in 1980 as BioTherm Engineering, we created the first commercialized root zone heating (RZH) systems for commercial horticulture. We  continue to grow and innovate new solutions for commercial plant growers. </h4>
 				
@@ -71,13 +78,12 @@
 									<div class="icon icon-info">
 										<img class="img" src="img/biotherm-heat.png" style="width:100px;"/>
 									</div>
-									<h4 class="card-title">Environmental</h4>
+									<h4 class="card-title">Climate Systems</h4>
 									<ul class="product-card-list">
-											<li>Heating / Cooling</li>
-											<li>Dehumidification</li>
-											<li>CO<sub>2</sub></li>
+											<li>Heating - Cooling</li>
+											<li>Dehu - CO<sub>2</sub></li>
 									</ul>
-									<a href="heat.html"><button type="button" class="btn btn-danger"><b>Environmental</b></button></a>
+									<a href="heat.html"><button type="button" class="btn btn-danger"><b>Climate Systems</b></button></a>
 									</div>
 								</div>
 							</div>
@@ -87,12 +93,12 @@
 									<div class="icon icon-success">
 										<img class="img" src="img/biotherm-hydro.png" style="width:100px;"/>
 									</div>
-									<h4 class="card-title">Waterworks</h4>
+									<h4 class="card-title">Hydro Sciences</h4>
 									<ul class="product-card-list">
-											<li>Dissolved Oxygen</li>
+											<li>Oxygen Infusion</li>
 											<li>Flood Floors</li>
 									</ul>
-									<a href="hydro.html"><button type="button" class="btn btn-hydro"><b>Waterworks</b></button></a>
+									<a href="hydro.html"><button type="button" class="btn btn-hydro"><b>Hydro Sciences</b></button></a>
 								</div>
 							</div>
 						</div>
@@ -102,12 +108,12 @@
 									<div class="icon icon-danger">
 										<img class="img" src="img/biotherm-tech.png" style="width:100px;"/>
 									</div>
-									<h4 class="card-title">Automation</h4>
+									<h4 class="card-title">Data &amp; Automation</h4>
 									<ul class="product-card-list">
 											<li>Data Visualization</li>
 											<li>Control Solutions</li>
 									</ul>
-									<a href="tech.html"><button type="button" class="btn btn-success"><b>Automation</b></button></a>
+									<a href="tech.html"><button type="button" class="btn btn-success"><b>Data &amp; Automation</b></button></a>
 								</div>
 							</div>
 						</div>
